--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# Environments
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Environments:
 .env
 .venv
 env/
@@ -6,3 +15,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Flask:
+instance/
+.webassets-cache
