--- a/allunbot/requirements.txt
+++ b/allunbot/requirements.txt
@@ -4,5 +4,10 @@ pyTelegramBotAPI-markups==0.0.4
 beautifulsoup4==4.11.2
 Flask==2.2.3
 gunicorn==19.9.0
+matplotlib==3.7.1
+numpy==1.24.2
+pandas==2.0.0
+prettytable==3.7.0
 requests==2.28.2
+selenium==4.8.2
 html5lib==1.1
