--- a/allunbot/requirements.txt
+++ b/allunbot/requirements.txt
@@ -8,6 +8,7 @@ matplotlib==3.7.1
 numpy==1.24.2
 pandas==2.0.0
 prettytable==3.7.0
+regex==2023.3.23
 requests==2.28.2
 selenium==4.8.2
 html5lib==1.1
