--- a/allunbot/requirements.txt
+++ b/allunbot/requirements.txt
@@ -1,15 +1,17 @@
-python-dotenv==0.10.1
-pyTelegramBotAPI==4.10.0
-pyTelegramBotAPI-markups==0.0.4
 beautifulsoup4==4.11.2
 Flask==2.2.3
+Flask-Login==0.6.2
 gunicorn==19.9.0
+html5lib==1.1
 matplotlib==3.7.1
 numpy==1.24.2
 pandas==2.0.0
 prettytable==3.7.0
+pymongo[srv]==3.7.2
+pyTelegramBotAPI==4.10.0
+pyTelegramBotAPI-markups==0.0.4
+python-dotenv==0.10.1
 regex==2023.3.23
 requests==2.28.2
+schedule==1.2.0
 selenium==4.8.2
-html5lib==1.1
-pymongo[srv]==3.7.2
