--- a/allunbot/requirements.txt
+++ b/allunbot/requirements.txt
@@ -1,4 +1,5 @@
 beautifulsoup4==4.11.2
+chromedriver-autoinstaller==0.4.0
 Flask==2.2.3
 Flask-Login==0.6.2
 gunicorn==19.9.0
@@ -15,3 +16,4 @@ regex==2023.3.23
 requests==2.28.2
 schedule==1.2.0
 selenium==4.8.2
+webdriver-manager==3.8.5
