--- a/allunbot/dockerfile
+++ b/allunbot/dockerfile
@@ -37,6 +37,8 @@ RUN apt-get update && \
 ENV LANG es_CO.utf8
 ENV LC_ALL es_CO.utf8
 
+RUN pip install --upgrade pip
+
 # Copia el archivo requirements.txt al contenedor
 COPY requirements.txt .
 
